# noconf

./: setup.cfg
.github/workflows/: python.yml
noconf/: __init__.py  conf.py  test_conf.py
