# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = noconf
version = attr: noconf.__version__
description = Component-based configuration for everyone!
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE.txt

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
devel =
    pytest
    ruff

[tool:pytest]
addopts =
    -v
    --doctest-modules
    --doctest-glob="*.rst"
    --tb=short
testpaths =
    noconf/
    README.rst
markers =
    slow: mark test as slow.
